<resources>
    <string name="app_name">Speed Runner</string>
    <string name="play">Play</string>
    <string name="character">Character</string>
    <string name="high_score">High Score</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="menu_title">Speed Runner</string>
    <string name="resume">Resume</string>
    <string name="restart">Restart</string>
    <string name="main_menu">Main Menu</string>
    <string name="sound_on">Sound effects</string>
    <string name="music_on">Music</string>
    <string name="game_over">Game Over</string>
    <string name="distance">Distance</string>
    <string name="score">Score</string>
    <string name="coins">Coins</string>
    <string name="best_score">Best Score</string>
</resources>
